intel/bench_214/extr_.FFmpeglibavdevicepulse_audio_enc.c_pulse_map_channels_to_pulse_with_main/log.txt
bench_214/extr_.FFmpeglibavdevicepulse_audio_enc.c_pulse_map_channels_to_pulse_with_main/extr_.FFmpeglibavdevicepulse_audio_enc.c_pulse_map_channels_to_pulse_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
1 error generated.
HLS FPGA Parse FAILED.
